--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,31 @@
     <meta charset="utf-8"/>
     <link rel="icon" type="image/png" href="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ui-view="title"></title>
+    <title>Tingsystems</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/css/main.css">
+    <!-- endinject -->
 </head>
 <body>
+<!--[if	lt	IE	8]>
+<p class="browsehappy">
+    Estás usando un navegador <strong>desactualizado</strong>.
+    Por favor <a href="http://browsehappy.com/">actualiza tu navegador</a>
+    Para mejorar la experiencia..
+</p>
+<![endif]-->
+<p>Hola Mundo! Hay vamos!!</p>
+<!-- bower:js -->
+<!-- endbower -->
+<!-- inject:js -->
+<script src="/js/app.js"></script>
+<script src="/js/controllers.js"></script>
+<script src="/js/directives.js"></script>
+<script src="/js/services.js"></script>
+<!-- endinject -->
 </body>
 </html>
