set ts-token on the headers

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es" ng-app="app">
+<html lang="es" ng-app="annalise">
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" type="image/png" href="">
@@ -8,7 +8,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -22,7 +22,7 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<p class="text-success">Hola Mundo! Hay vamos!!</p>
+
 
 <div class="container" ui-view="content"></div>
 
