Ajuste de diseño aplicado a la app, solo index

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,20 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <!-- endbower -->
+
+    <!--Favicon-->
+    <link href="images/favicon.ico" rel="shortcut icon" type="favicon">
+
+    <!--Bootstrap cdn-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
@@ -22,7 +34,270 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<p class="text-success">Hola Mundo! Hay vamos!!</p>
+<header id="header_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="logo">
+                    <h2><a href=""><img src="../img/logo.png"></a></h2>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="mainmenu">
+                    <div class="navbar navbar-nobg">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                    data-target=".navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+
+                        <div class="navbar-collapse collapse">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">Nosotros</a>
+                                </li>
+                                <li><a href="#">Proyectos</a>
+                                </li>
+                                <li><a href="#">Blog</a>
+                                </li>
+                                <li><a href="#">Contacto</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 header_padding">
+                <div class="header_area_text">
+                    <h2 class="wow slideInUp" data-wow-duration="2s">Tu consultor tecnológico</h2>
+
+                    <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
+                        en el mundo digital </p>
+                    <a class="btn-green wow slideInUp" data-wow-duration="3s" href="#">Hablanos de tu
+                        proyecto </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- end header top area -->
+
+<section id="portfolio_area" class="section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <a href="#">
+                        <h3>Mercado Móvil</h3>
+                        <img class="portfolio_img" src="../img/periodico-la-verdad.png">
+                    </a>
+                </div>
+            </div>
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <h3>Periódico la verdad</h3>
+                    <img class="portfolio_img" src="../img/mm.jpg">
+                </div>
+            </div>
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <h3>Dachvill</h3>
+                    <img class="portfolio_img" src="../img/dachvill.jpg">
+                </div>
+            </div>
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <h3>Super 24</h3>
+                    <img class="portfolio_img" src="../img/super24.jpg">
+                </div>
+            </div>
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <h3>Ofertas la Ciénega</h3>
+                    <img class="portfolio_img" src="../img/ofertas-cienega.jpg">
+                </div>
+            </div>
+            <div class="col-sm-4 no-padding">
+                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <h3>Corredor Insurgentes</h3>
+                    <img class="portfolio_img" src="../img/corredor.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end portfolio say area -->
+
+<section id="story_area" class="section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="story_image wow slideInLeft" data-wow-duration="2s">
+                    <img src="../img/work-team.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="story_text wow slideInRight" data-wow-duration="2s">
+                    <h2>Metodología de trabajo</h2>
+
+                    <p>Tingsystems nació en el año 2011 como comunidad de desarrollo web integrada por alumnos y
+                        docentes del Instituto Tecnológico de Jiquilpan con la misión de llevar conocimiento y apoyo al
+                        mundo. Durante el tiempo como comunidad tuvimos la oportunidad de desarrollar varios proyectos y
+                        generar experiencia.</p>
+
+                    <p>En el 2014 Tingsystems se forma como empresa ofreciendo servicios de diseño web, registro de
+                        dominios, alojamiento web y marketing online. Trabajamos día con día para expandir nuestros
+                        servicios.</p>
+                    <a href="">Más a cerca de nosotros</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="Experience_area" class="section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="experience wow slideInLeft">
+                    <h2>Nuestra experiencia</h2>
+
+                    <p>A lo largo de los años nos hemos convertido en expertos en realizar proyectos que satisfagan las
+                        necesidades de nuestros clientes, sin embargo siempre tratamos de mantenernos a la vanguardia
+                        usando nuevas tecnologías que beneficien nuestros proyectos y a nuestros clientes.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="skills">
+                    <h2>Skills</h2>
+
+                    <div class="skill_right">
+
+                        <div class="wow slideInUp">
+                            <h3>User experience design</h3>
+                        </div>
+
+                        <div class="wow slideInUp">
+                            <h3>E-commerce</h3>
+                        </div>
+
+                        <div class="wow slideInUp">
+                            <h3>Mobile</h3>
+                        </div>
+
+                        <div class="wow slideInUp">
+                            <h3>Add-words</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end experience area -->
+
+<section id="clients_area" class="section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="single_blog wow slideInUp" data-wow-duration="1s">
+                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="single_blog wow slideInUp" data-wow-duration="2s">
+                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="single_blog wow slideInUp" data-wow-duration="3s">
+                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="single_blog wow slideInUp" data-wow-duration="3s">
+                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end clients area -->
+
+<section id="caal_to_action_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="call_to_action_text wow slideInLeft" data-wow-duration="2s">
+                    <h2>¡Hablanos de tu proyecto!</h2>
+
+                    <p>Envíanos un mensaje, dinos cuales son tus dudas y te atenderemos de ¡inmediato!</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="call_project text-right wow slideInRight" data-wow-duration="2s">
+                    <a href="#" class="btn-green">Comenzar mi proyecto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end call to action area -->
+
+
+<footer id="footer_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="company_logo wow slideInDown">
+                    <img src="images/icon.png">
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="company_address wow slideInDown">
+                    <h2>Contacto</h2>
+
+                    <p>Colonia Hospitales, Calzada Juarez #367 Jiquilpan, Michoacán, México
+                    </p>
+
+                    <h3>
+                        <a href="tel:013531283781">01(353) 128 3781</a>
+                        <a href="mailto:info@tingsystems.com">info@tingsystems.com</a></h3>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="company_address wow slideInDown">
+                    <h2>Síguenos en</h2>
+
+                    <a href=""><i class="fa fa-facebook fa-2x"></i> Facebook</a><br/>
+                    <a href=""><i class="fa fa-twitter fa-2x"></i> Twitter</a><br/>
+                    <a href=""><i class="fa fa-google-plus fa-2x"></i> Google plus</a><br/>
+                    <a href=""><i class="fa fa-instagram fa-2x"></i> Instagram</a>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="company_address wow slideInDown">
+                    <h2>Información</h2>
+                    <a href="">Programa de afiliados</a>
+                    <a href="">Preguntas frecuentes</a>
+                    <a href="">Política de privacidad</a>
+                    <a href="">Buzón de quejas y sugerencias</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="divider_footer"/>
+    <div class="container">
+        <div class="text-center">
+            Diseño y desarrollo 2015 por <a href="#">Tingsystems</a>
+        </div>
+    </div>
+</footer>
 
 <div class="container" ui-view="content"></div>
 
@@ -32,6 +307,7 @@
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/wow/dist/wow.js"></script>
 <!-- endbower -->
 <!-- inject:js -->
 <script src="/js/app.js"></script>
