Ajuste de estilo a prefooter

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/animate.css/animate.css"/>
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <!-- endbower -->
 
     <!--Favicon-->
@@ -204,6 +204,11 @@
 <section id="clients_area" class="section_padding">
     <div class="container">
         <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>Clientes</h2>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-3">
                 <div class="single_blog wow slideInUp" data-wow-duration="1s">
                     <img class="img-responsive" src="../img/corredor.jpg" alt="">
@@ -241,7 +246,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="call_project text-right wow slideInRight" data-wow-duration="2s">
-                    <a href="#" class="btn-green">Comenzar mi proyecto</a>
+                    <a href="#" class="btn-white-clear">Comenzar mi proyecto</a>
                 </div>
             </div>
         </div>
@@ -255,7 +260,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="company_logo wow slideInDown">
-                    <img src="images/icon.png">
+                    <img src="../img/icon.png">
                 </div>
             </div>
             <div class="col-sm-3">
