order of the items of menu

--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,12 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="lib/animate.css/animate.css"/>
     <!-- endbower -->
 
     <!--Favicon-->
     <link href="images/favicon.ico" rel="shortcut icon" type="favicon">
-
-    <!--Bootstrap cdn-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- Fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -57,12 +54,9 @@
 
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Nosotros</a>
-                                </li>
-                                <li><a href="#">Proyectos</a>
-                                </li>
-                                <li><a href="#">Blog</a>
-                                </li>
+                                <li><a href="#">Proyectos</a></li>
+                                <li><a href="#">Nosotros</a></li>
+                                <li><a href="#">Blog</a></li>
                                 <li><a href="#">Contacto</a>
                                 </li>
                             </ul>
