template home partial

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="lib/animate.css/animate.css"/>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <!-- endbower -->
 
     <!--Favicon-->
@@ -57,8 +57,7 @@
                                 <li><a href="#">Proyectos</a></li>
                                 <li><a href="#">Nosotros</a></li>
                                 <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contacto</a>
-                                </li>
+                                <li><a href="#">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -81,173 +80,7 @@
 </header>
 <!-- end header top area -->
 
-<section id="portfolio_area" class="section_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <a href="#">
-                        <h3>Mercado Móvil</h3>
-                        <img class="portfolio_img" src="../img/periodico-la-verdad.png">
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Periódico la verdad</h3>
-                    <img class="portfolio_img" src="../img/mm.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Dachvill</h3>
-                    <img class="portfolio_img" src="../img/dachvill.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Super 24</h3>
-                    <img class="portfolio_img" src="../img/super24.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Ofertas la Ciénega</h3>
-                    <img class="portfolio_img" src="../img/ofertas-cienega.jpg">
-                </div>
-            </div>
-            <div class="col-sm-4 no-padding">
-                <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
-                    <h3>Corredor Insurgentes</h3>
-                    <img class="portfolio_img" src="../img/corredor.jpg">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end portfolio say area -->
-
-<section id="story_area" class="section_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="story_image wow slideInLeft" data-wow-duration="2s">
-                    <img src="../img/work-team.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="story_text wow slideInRight" data-wow-duration="2s">
-                    <h2>Metodología de trabajo</h2>
-
-                    <p>Tingsystems nació en el año 2011 como comunidad de desarrollo web integrada por alumnos y
-                        docentes del Instituto Tecnológico de Jiquilpan con la misión de llevar conocimiento y apoyo al
-                        mundo. Durante el tiempo como comunidad tuvimos la oportunidad de desarrollar varios proyectos y
-                        generar experiencia.</p>
-
-                    <p>En el 2014 Tingsystems se forma como empresa ofreciendo servicios de diseño web, registro de
-                        dominios, alojamiento web y marketing online. Trabajamos día con día para expandir nuestros
-                        servicios.</p>
-                    <a href="">Más a cerca de nosotros</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="Experience_area" class="section_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="experience wow slideInLeft">
-                    <h2>Nuestra experiencia</h2>
-
-                    <p>A lo largo de los años nos hemos convertido en expertos en realizar proyectos que satisfagan las
-                        necesidades de nuestros clientes, sin embargo siempre tratamos de mantenernos a la vanguardia
-                        usando nuevas tecnologías que beneficien nuestros proyectos y a nuestros clientes.</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="skills">
-                    <h2>Skills</h2>
-
-                    <div class="skill_right">
-
-                        <div class="wow slideInUp">
-                            <h3>User experience design</h3>
-                        </div>
-
-                        <div class="wow slideInUp">
-                            <h3>E-commerce</h3>
-                        </div>
-
-                        <div class="wow slideInUp">
-                            <h3>Mobile</h3>
-                        </div>
-
-                        <div class="wow slideInUp">
-                            <h3>Add-words</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end experience area -->
-
-<section id="clients_area" class="section_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h2>Clientes</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-3">
-                <div class="single_blog wow slideInUp" data-wow-duration="1s">
-                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="single_blog wow slideInUp" data-wow-duration="2s">
-                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="single_blog wow slideInUp" data-wow-duration="3s">
-                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="single_blog wow slideInUp" data-wow-duration="3s">
-                    <img class="img-responsive" src="../img/corredor.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end clients area -->
-
-<section id="caal_to_action_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="call_to_action_text wow slideInLeft" data-wow-duration="2s">
-                    <h2>¡Hablanos de tu proyecto!</h2>
-
-                    <p>Envíanos un mensaje, dinos cuales son tus dudas y te atenderemos de ¡inmediato!</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="call_project text-right wow slideInRight" data-wow-duration="2s">
-                    <a href="#" class="btn-white-clear">Comenzar mi proyecto</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end call to action area -->
-
+<div ui-view="content"></div>
 
 <footer id="footer_area">
     <div class="container">
@@ -297,8 +130,6 @@
         </div>
     </div>
 </footer>
-
-<div class="container" ui-view="content"></div>
 
 <!-- bower:js -->
 <script src="lib/jquery/dist/jquery.js"></script>
