add projects template, update home add skills list, featured post

--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,9 @@
 
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="*">Proyectos</a></li>
+                                <li><a ui-sref="projects({kind: 'project'})">Proyectos</a></li>
                                 <li><a ui-sref="page({slug: 'nosotros'})">Nosotros</a></li>
-                                <li><a ui-sref="blog">Blog</a></li>
+                                <li><a ui-sref="blog({kind: 'post'})">Blog</a></li>
                                 <li><a ui-sref="contact">Contacto</a></li>
                             </ul>
                         </div>
