--- a/app/index.html
+++ b/app/index.html
@@ -31,42 +31,48 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<header id="header_area">
+<header class="header">
+    <nav class="mainmenu">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar navbar-nobg">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Menú</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/"><img src="../img/logo.png"
+                                                          class="logo" alt="Cigal"></a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="main-nav nav navbar-nav navbar-right">
+                        <li class="wow fadeInDown" data-wow-delay="2s"><a href="#">Nosotros</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0s"><a href="#">Proyectos</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0s"><a href="#">Blog</a></li>
+                        <li class="wow fadeInDown" data-wow-delay="0s"><a href="#">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+</header>
+<!-- end header top area -->
+
+<!-- slider -->
+
+<div id="slider-area">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                <div class="logo">
-                    <h2><a href=""><img src="../img/logo.png"></a></h2>
-                </div>
-            </div>
-            <div class="col-sm-8">
-                <div class="mainmenu">
-                    <div class="navbar navbar-nobg">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                    data-target=".navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                        </div>
-
-                        <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#">Proyectos</a></li>
-                                <li><a href="#">Nosotros</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Contacto</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3 header_padding">
-                <div class="header_area_text">
+            <div class="col-md-6 col-md-offset-3 header-padding">
+                <div class="slider-area-text">
                     <h2 class="wow slideInUp" data-wow-duration="2s">Tu consultor tecnológico</h2>
 
                     <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
@@ -77,8 +83,8 @@
             </div>
         </div>
     </div>
-</header>
-<!-- end header top area -->
+</div>
+
 
 <div ui-view="content"></div>
 
@@ -98,27 +104,27 @@
                     </p>
 
                     <h3>
-                        <a href="tel:013531283781">01(353) 128 3781</a>
-                        <a href="mailto:info@tingsystems.com">info@tingsystems.com</a></h3>
+                        <a class="footer-links" href="tel:013531283781">01(353) 128 3781</a>
+                        <a class="footer-links" href="mailto:info@tingsystems.com">info@tingsystems.com</a></h3>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="company_address wow slideInDown">
                     <h2>Síguenos en</h2>
 
-                    <a href=""><i class="fa fa-facebook fa-2x"></i> Facebook</a><br/>
-                    <a href=""><i class="fa fa-twitter fa-2x"></i> Twitter</a><br/>
-                    <a href=""><i class="fa fa-google-plus fa-2x"></i> Google plus</a><br/>
-                    <a href=""><i class="fa fa-instagram fa-2x"></i> Instagram</a>
+                    <a class="footer-links social-media" href=""><i class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href=""><i class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href=""><i class="fa fa-google-plus"></i></a>
+                    <a class="footer-links social-media" href=""><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="company_address wow slideInDown">
                     <h2>Información</h2>
-                    <a href="">Programa de afiliados</a>
-                    <a href="">Preguntas frecuentes</a>
-                    <a href="">Política de privacidad</a>
-                    <a href="">Buzón de quejas y sugerencias</a>
+                    <a class="footer-links" href="">Programa de afiliados</a>
+                    <a class="footer-links" href="">Preguntas frecuentes</a>
+                    <a class="footer-links" href="">Política de privacidad</a>
+                    <a class="footer-links" href="">Buzón de quejas y sugerencias</a>
                 </div>
             </div>
         </div>
@@ -126,7 +132,7 @@
     <hr class="divider_footer"/>
     <div class="container">
         <div class="text-center">
-            Diseño y desarrollo 2015 por <a href="#">Tingsystems</a>
+            Diseño y desarrollo 2015 por <a class="footer-links" href="#">Tingsystems</a>
         </div>
     </div>
 </footer>
