--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <!-- endbower -->
 
@@ -136,7 +136,7 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
 <!-- endbower -->
 <!-- inject:js -->
