--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,7 @@
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
+<script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <!-- endbower -->
 <!-- inject:js -->
 <script src="/js/app.js"></script>
