--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="lib/animate.css/animate.css"/>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
     <!-- endbower -->
 
     <!--Favicon-->
@@ -33,13 +33,12 @@
 <![endif]-->
 <header class="header">
     <nav class="mainmenu">
-        <div class="container">
+        <div class="container container-main">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar navbar-nobg">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Menú</span>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -115,8 +114,8 @@
                 <div class="company_address wow slideInDown">
                     <h2>Síguenos en</h2>
 
-                    <a class="footer-links social-media" href=""><i class="fa fa-facebook"></i></a>
-                    <a class="footer-links social-media" href=""><i class="fa fa-twitter"></i></a>
+                    <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i class="fa fa-facebook"></i></a>
+                    <a class="footer-links social-media" href="https://twitter.com/Tingsystems"><i class="fa fa-twitter"></i></a>
                     <a class="footer-links social-media" href=""><i class="fa fa-google-plus"></i></a>
                     <a class="footer-links social-media" href=""><i class="fa fa-instagram"></i></a>
                 </div>
@@ -147,9 +146,6 @@
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
-<script>
-    new WOW().init();
-</script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <!-- endbower -->
 <!-- inject:js -->
