Ajustes en page, single, contact, blog y home

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
                     <a class="footer-links social-media" href="https://www.facebook.com/tingsystems"><i class="fa fa-facebook"></i></a>
                     <a class="footer-links social-media" href="https://twitter.com/Tingsystems"><i class="fa fa-twitter"></i></a>
                     <a class="footer-links social-media" href=""><i class="fa fa-google-plus"></i></a>
-                    <a class="footer-links social-media" href=""><i class="fa fa-instagram"></i></a>
+                    <a class="footer-links social-media" href=https://www.instagram.com/tingsystems/"><i class="fa fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-sm-3">
@@ -132,7 +132,7 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <!-- endbower -->
