--- a/app/index.html
+++ b/app/index.html
@@ -7,21 +7,20 @@
     <title>Tingsystems</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
-    <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <!-- endbower -->
-
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
-
     <!-- Fonts -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-
+    <!-- build:css css/style.min.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
+    <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
+    <!-- endbuild -->
 </head>
 <body>
 <!--[if	lt	IE	8]>
@@ -123,25 +122,29 @@
     <hr class="divider_footer"/>
     <div class="container">
         <div class="text-center">
-            Diseño y desarrollo 2015 por <a class="footer-links" href="*">Tingsystems</a>
+            Diseño y desarrollo 2015 por <a class="footer-links" href="#">Tingsystems</a>
         </div>
     </div>
 </footer>
-
+<!-- build:js js/vendor.min.js -->
 <!-- bower:js -->
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/wow/dist/wow.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <!-- endbower -->
+<!-- endbuild -->
+<!-- build:js js/annalise.min.js -->
 <!-- inject:js -->
 <script src="/js/app.js"></script>
 <script src="/js/controllers.js"></script>
 <script src="/js/directives.js"></script>
 <script src="/js/services.js"></script>
+<script src="/js/templates.js"></script>
 <!-- endinject -->
+<!-- endbuild -->
 </body>
 </html>
