--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -142,7 +141,6 @@
 <script src="/js/controllers.js"></script>
 <script src="/js/directives.js"></script>
 <script src="/js/services.js"></script>
-<script src="/js/templates.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 </body>
