--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <title>Tingsystems</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
+    <base href="/">
     <!--Favicon-->
     <link href="img/favicon.ico" rel="shortcut icon" type="favicon">
     <!-- Fonts -->
