--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar navbar-nobg">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainmenu">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -47,7 +47,7 @@
                                                           class="logo" alt="Tingsystems"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" id="header-mainmenu">
                     <ul class="main-nav nav navbar-nav navbar-right">
                         <li class="wow fadeInDown" data-wow-delay="2s">
                             <a ui-sref="page({slug: 'nosotros'})">Nosotros</a>
