--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
     <!-- endbuild -->
+    <!-- Smartsupp Live Chat script -->
+    <script type="text/javascript">var _smartsupp = _smartsupp || {};_smartsupp.key = 'db3cb0c6f69ab5b0b611e01a1b4eb25832c8f25a';window.smartsupp||(function(d) {var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];s=d.getElementsByTagName('script')[0];c=d.createElement('script');c.type='text/javascript';c.charset='utf-8';c.async=true;c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);})(document);</script>
 </head>
 <body>
 <!--[if	lt	IE	8]>
@@ -143,5 +145,8 @@
 <script src="/js/templates.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-47259316-3', 'tingsystems.com');ga('require', 'displayfeatures');ga('send', 'pageview');
+</script>
 </body>
 </html>
